Update quick-add-modal spacing; need to fix on small screens

--- a/frontend/src/styles/modal.css
+++ b/frontend/src/styles/modal.css
@@ -47,9 +47,14 @@ dialog[open]::backdrop {
   opacity: 1;
 }
 
+@media (min-width: 500px) {
+  :host-context(quick-add-modal) ::slotted(article[slot='content']) {
+    width: 50dvw;
+    height: 50dvh;
+  }
+}
 :host-context(quick-add-modal) ::slotted(article[slot='content']) {
-  width: 50dvw;
-  height: 50dvh;
+  margin: 0 !important;
 }
 
 @media (max-width: 500px) {
